2005-05-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* COPYING, ChangeLog, ChangeLog.00, ChangeLog.01, ChangeLog.02,
	ChangeLog.03, ChangeLog.96, ChangeLog.98, HACKING, Makefile.am,
	NEWS, README, TODO, aclocal.in, automake.in, bootstrap, configure,
	configure.ac, doc/Makefile.am, doc/fdl.texi, lib/COPYING,
	lib/Makefile.am, lib/acinstall, lib/compile, lib/config-ml.in,
	lib/config.guess, lib/config.sub, lib/depcomp, lib/elisp-comp,
	lib/gnupload, lib/mdate-sh, lib/missing, lib/py-compile,
	lib/symlink-tree, lib/texinfo.tex, lib/ylwrap,
	lib/Automake/ChannelDefs.pm, lib/Automake/Channels.pm,
	lib/Automake/Condition.pm, lib/Automake/Config.in,
	lib/Automake/Configure_ac.pm, lib/Automake/DisjConditions.pm,
	lib/Automake/FileUtils.pm, lib/Automake/General.pm,
	lib/Automake/Item.pm, lib/Automake/ItemDef.pm,
	lib/Automake/Location.pm, lib/Automake/Makefile.am,
	lib/Automake/Options.pm, lib/Automake/Rule.pm,
	lib/Automake/RuleDef.pm, lib/Automake/Struct.pm,
	lib/Automake/VarDef.pm, lib/Automake/Variable.pm,
	lib/Automake/Version.pm, lib/Automake/Wrap.pm,
	lib/Automake/XFile.pm, lib/Automake/tests/Condition.pl,
	lib/Automake/tests/DisjConditions.pl,
	lib/Automake/tests/Makefile.am, lib/Automake/tests/Version.pl,
	lib/Automake/tests/Wrap.pl, lib/am/Makefile.am,
	lib/am/ansi2knr.am, lib/am/check.am, lib/am/clean-hdr.am,
	lib/am/clean.am, lib/am/compile.am, lib/am/configure.am,
	lib/am/data.am, lib/am/dejagnu.am, lib/am/depend.am,
	lib/am/depend2.am, lib/am/distdir.am, lib/am/footer.am,
	lib/am/header-vars.am, lib/am/header.am, lib/am/inst-vars.am,
	lib/am/install.am, lib/am/java.am, lib/am/lang-compile.am,
	lib/am/lex.am, lib/am/library.am, lib/am/libs.am,
	lib/am/libtool.am, lib/am/lisp.am, lib/am/ltlib.am,
	lib/am/ltlibrary.am, lib/am/mans-vars.am, lib/am/mans.am,
	lib/am/multilib.am, lib/am/program.am, lib/am/progs.am,
	lib/am/python.am, lib/am/remake-hdr.am, lib/am/scripts.am,
	lib/am/subdirs.am, lib/am/tags.am, lib/am/texi-vers.am,