@@ -1,3 +1,11 @@
+2005-05-15  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	Fix PR automake/461:
+	* automake.in (require_build_directory): Canonize directories with
+	different name, such as `foo/bar' and `./foo//bar'.
+	* tests/subobj9.test: Augment to test that.
+	Report from Tom Tromey.
+
 2005-05-14  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* COPYING, ChangeLog, ChangeLog.00, ChangeLog.01, ChangeLog.02,
